--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,9 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
 
+export PYBUILD_DESTDIR_python2=debian/python-shadowsocks
+export PYBUILD_DESTDIR_python3=debian/shadowsocks
+export PYBUILD_AFTER_INSTALL_python2=rm -rf '{destdir}/usr/bin'
+
 %:
-	dh $@ --with python2 --buildsystem=python_distutils
+	dh $@ --with python3,python2 --buildsystem=pybuild
